--- a/TributePage/style.css
+++ b/TributePage/style.css
@@ -1,1 +1,186 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html{
+    font-family: Roboto, Helvetica, sans-serif;
+}
+
+body{
+    color: #000;
+    background: #fff;
+    
+}
+
+hr{
+    border: 0;
+    height: 1px;
+    background: #ccc;
+    margin: 10px auto;
+    box-shadow:  0 1px 6px gray;
+}
+
+a{
+    text-decoration: none;
+}
+
+#navbar{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 60px;
+    height: 100%;
+    background-color: lightgray;
+    text-align: center;
+    display: flex;
+    box-shadow: 0 1px 5px rgb(34, 34, 34);
+    align-items: center;
+}
+
+#navicons i{  
+    font-size: 40px;
+    padding: 15px 0;
+    color: #000;
+    width: 100%;
+    cursor: pointer;
+}
+
+#navicons i:hover{
+    background-color: #bebebe;
+}
+
+#header{
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+#title{
+    text-transform: capitalize;
+    font-size: 50px;
+    padding: 15px;
+}
+
+#sub-title{
+    display: inline;
+    font-size: 20px;
+}
+
+#main{
+    margin: 10px 10px 0px 80px;
+    padding-inline: 20px;
+    max-width: 1400px;
+    min-width: 500px;
+}
+
+.tribute{
+    display: flex;
+    flex-wrap: wrap;
+    margin: 20px 0;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.tribute-info{
+    flex-basis: 70%;
+    border-left: solid 5px gray;
+    box-shadow: 0 1px 6px gray;
+    height: fit-content;
+    line-height: 1.3;
+}
+
+.img-div{
+    flex-basis: 28%;
+    margin: 10px auto;
+    width: 100%;
+    min-width: 150px;
+    max-width: 350px;
+    box-shadow:  0 1px 6px gray;
+    border-radius: 5px;
+    overflow: hidden;
+}
+
+.img-caption{
+    text-align: center;
+    margin: 10px;
+    color: gray;
+}
+
+img{
+    width: 100%;
+    height: auto;
+    display: block;
+    max-width: 350px;
+}
+
+.tribute-title{
+    border-bottom: lightgray solid 1px;
+    padding: 5px 0;
+    font-weight: 400;
+    font-size: 30px;
+    margin-inline: 15px;
+    text-transform: capitalize;
+}
+
+.tribute-text{
+    padding: 10px 15px;
+    font-size: 20px;
+}
+
+#tribute-link{
+    text-align: center;
+    font-size: 20px;
+    margin: 50px 0 60px 0;
+    color: gray;
+}
+#tribute-link a{
+    color: #352d51;
+}
+
+#tribute-link a:hover{
+    color: gray;
+    text-decoration: underline;
+}
+
+/***************************/
+
+@media screen and (max-width: 1200px){
+    #navbar{
+        bottom: 0;
+        top: auto;
+        width: 100%;
+        height: 50px;
+        justify-content: center;    
+    }
+
+    #navicons{
+        display: flex;
+        height: 50px;
+        width: 250px;
+        align-items: center;
+    }
+    #navicons i{  
+        font-size: 35px;
+        padding: 8px 0;
+        width: 50px;
+    }
+
+    #main{
+        margin: auto;
+    }  
+}
+
+@media screen and (max-width: 1000px){
+
+    .tribute-info{
+        flex-basis: 100%;
+        margin-top: 15px;
+    }
+    
+    .img-div{
+        flex-basis: 100%;
+    }
+}
+    
 
