--- a/Product Landing Page/style.css
+++ b/Product Landing Page/style.css
@@ -1,10 +1,13 @@
 :root{
-    --layout-backcolor: #002147;
-    --navlink-color:#ffffff;
-    --main-backcolor: #192537;
-    --main-textcolor: #ffffff;
-    --footer-textcolor: #b09e80;
-    --footer-backcolor: #000;
+    --layout-backcolor: #fff;
+    --navlink-color:#fff;
+    --backcolor1: #fff;
+    --textcolor1: #000;
+    --backcolor2: #fff;
+    --textcolor2: #000;
+    --contact-textcolor: #b09e80;
+    --contact-backcolor: #000;
+    --star-color: #cc9f09;
 }
 
 html, body{
@@ -16,7 +19,7 @@ body{
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 18px; 
     flex-direction: column;
-    background-color: #00142b;
+    background-color: #fff;
 }
 
   /*******************/
@@ -25,24 +28,51 @@ body{
 
 #header{
     position: fixed;
+    top: 0;
     z-index: 1;
-    height: 85px;
+    height: 60px;
     width: 100%;
     align-items: center;
-    background-color: var(--layout-backcolor); 
-    box-shadow: 0 0 2px #000000;
     justify-content: space-between;
+    transition: 0.7s;
+}
+
+.scroll{
+    background-color: #15181a;
+    transition: 0.7s;
+    box-shadow: #15181a 0px 0px 10px;
 }
 
 #header-img{
-    margin-left: 50px;
+    height: 60px;
+    width: 60px;
+    border-radius: 50%;
 }
 
 #nav-bar{
+    flex: 4;
     padding: 10px;
-    text-shadow: 0 0 8px #000000;
     transition: 1s;
     font-size: 17px;
+}
+
+.buy-btn{
+    margin: auto;
+    appearance: none;
+    border: none;
+    padding: 10px;
+    border-radius: 10px;
+    background-color: #372f2f;
+    color: #fff;
+    cursor: pointer;
+    transition: 0.5s;
+    margin-right: 50px;
+}
+
+.buy-btn:hover{
+    transition: 0.5s;
+    color: #dbe196;
+    background-color: #1f1a1a;
 }
 
 #menu{
@@ -59,8 +89,7 @@ body{
 }
 
 .nav-link:hover{
-    color: #002147;
-    background-color: #fff4e5;
+    color: #dbe196;
     transition: 0.5s;
     text-shadow: none;
 }
@@ -75,44 +104,187 @@ body{
     transition: 0.3s
 }
 
-.menu-login:hover, .search:hover{
-    color: #002147;
-    background-color: #fff4e5;
+
+
+  /********************/
+ /*     product      */
+/********************/
+
+#product{
+    background-color: var(--backcolor1);
+    background-image: url(images/homeback.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    color: #fff;
+    height: 40%;
+}
+
+.product-description{
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 55%;
+    background-color: rgba(0, 0, 0, 0.5);
+    margin: auto;
+    border-radius: 10px;
+    padding: 40px;
+    text-align: center;
+}
+
+.product-description h1{
+    font-size: 50px;
+    padding: 10px;
+}
+
+.product-description p{
+    font-size: 18px;
+    padding: 10px;
+}
+
+  /********************/
+ /*     Features     */
+/********************/
+
+#features{
+    background-color: var(--backcolor1);
+    background-image: url(images/features-background-2.jpg);
+    background-size: cover;
+    width: 100%;
+    height: fit-content;
+    align-items: center;
+    padding-top: 40px;
+    padding-bottom: 40px;
+}
+
+.feature-flex{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.feature-img{
+    flex-basis: 50%;
+    padding: 20px;
+    margin: 40px;
+}
+
+.feature-basis{
+    flex-basis: 50%;
+    padding: 20px;
+    text-align: left;
+}
+
+.feature{
+    color: #000;
+    flex-basis: 50%;
+    padding: 10px;
+    margin: 20px;
+    border-radius: 10px;
+    background-color: #fff;
+    border: lightgray solid 1px;
+    align-items: center;
+}
+
+.feature h2{
+    font-size: 25px;
+    padding: 10px;
+}
+
+.feature p{
+    font-size: 17px;
+    padding: 10px;
+}
+
+
+#pricing{
+    background-color: var(--backcolor1);
+}
+
+#how-it-works{
+    background-color: var(--backcolor2);
+}
+
+  /*******************/
+ /*     pricing     */
+/*******************/
+
+#pricing{
+    margin-top: 40px;
+}
+
+.pricing-content{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    padding: 20px;
+}
+
+.pricing-products{
+    min-width: 135px;
+    flex-basis: 23%;
+    transition: 0.5s;
+    border-radius: 5px;
+    overflow: hidden;
+    background-color: rgb(234, 234, 203);
+    border: gray solid 1px;
+    margin-bottom: 20px;
+    color: #1f1a1a;
+}
+
+.pricing-products:hover{
+    transform: translateY(-5px);
     transition: 0.5s;
 }
 
+.pricing-products p{
+    font-size: 14px;
+    font-weight: bold;
+    color: #11042e;
+    padding-inline: 5%;
+    line-height: 20px;
+    margin-left: 10px;
+}
 
+.pricing-products .buy-btn{
+    margin-right: 15px;
+}
 
+#star{
+    font-weight: bolder;
+    color: var(--star-color);
+}
 
   /*******************/
- /*     Footer      */
+ /*     contact     */
 /*******************/
 
-footer{
-    background-color: var(--footer-backcolor);
-    min-height: 120px;
-    flex: 0 0 auto;
+#contact{
+    background-color: var(--contact-backcolor);
+    flex: 0 1 auto;
     flex-wrap: wrap;
 }
 
-.col-footer{
+.col-contact{
     flex-basis: 25%;
     min-width: 200px;
     padding: 40px 50px 20px 50px;
-    color: var(--footer-textcolor);
+    color: var(--contact-textcolor);
     line-height: 22px;
     font-size: 13px;
 }
 
-.col-footer a{
-    color: var(--footer-textcolor);
+.col-contact a{
+    color: var(--contact-textcolor);
 }
 
-.col-footer a:hover{
+.col-contact a:hover{
    text-decoration: underline;
 }
 
-.col-footer h3{
+.col-contact h3{
     padding: 10px 0px;
     font-weight: bold;
     font-size: 14px;
@@ -133,11 +305,27 @@ input[type=submit]{
 }
 
 
+
   /********************/
  /*  Costum classes  */
 /********************/
+
+.title{
+    color: #160645;
+    font-size: 70px;
+    padding: 10px;
+    text-align: center;
+}
+
+hr{
+    width: 180px;
+    margin: auto;
+    margin-bottom: 30px;
+    border-radius: 10px;
+    background-color: #160645;
+}
+
 main{
-    margin-top: 80px;
     flex: 1 0 auto;
 }
 
@@ -147,7 +335,65 @@ main{
 
 
 
-@media (max-width:800px) {
+@media (max-width:1000px) {
+    #product{
+        height: 25%;
+    }
+    .product-description{
+        width: 80%;
+    }
+
+
+    .feature-flex{
+        flex-wrap: wrap-reverse;
+    }
+
+    .feature-basis{
+        flex-basis: 90%;
+        padding: 20px;
+        text-align: center;
+    }
+    .feature-img{
+        flex-basis: 70%;
+        margin: 20px;
+    }
+
+    .pricing-products{
+        flex-basis: 40%;
+        margin: 20px;
+    }
+
+    .col-contact{
+        flex-basis: 50%;
+        padding: 20px;
+    }
+}
+
+
+
+@media (max-width:750px) {
+    #product{
+        height: 18%;
+    }
+
+    .product-description h1{
+        font-size: 40px;
+    }
     
-    
+    #nav-bar{
+        display: none;
+    }
+    .feature-basis{
+        flex-basis: 100%;
+        padding: 10px;
+        text-align: center;
+    }
+    .feature-img{
+        flex-basis: 85%;
+        margin: 20px;
+    }
+    .pricing-products{
+        flex-basis: 65%;
+        margin: 20px;
+    }
 }
